@@ -1,5 +1,14 @@
 2006-10-23  OHASHI Akira  <bg66@koka-in.org>
 
+	* mixi.el (with-mixi-decoded-time-value): New macro.
+	(mixi-encode-time-value): New function.
+	(mixi-time-less-p): Ditto.
+	(mixi-time-add): Ditto.
+	(mixi-seconds-to-time): Ditto.
+	(mixi-cache-expired-p): Use them.
+
+2006-10-23  OHASHI Akira  <bg66@koka-in.org>
+
 	* mixi.el (mixi-get-friends): Change the FRIEND and the MAX-NUMBERS
 	argument to the ARGS argument.
 	(mixi-get-diaries): Ditto.
